<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="48dp"
    tools:context=".presentation.ui.registration.RegistrationFragment">


    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/img_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/protect_title"
            android:textColor="@color/colorAccentGreen"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTop"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/protect_subtitle"
        android:textColor="@color/colorText"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageViewLock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textSubtitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="200dp"
        android:src="@drawable/ic_block"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonUnlock"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/protect_pw_input_hint" />

    <TextView
        android:id="@+id/buttonUnlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/protect_button_unlock"
        android:textAllCaps="true"
        android:textColor="@color/colorTextWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editPassword"
        android:layout_margin="8dp"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>