<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/img_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/profile_title"
        android:textColor="@color/colorAccentGreen"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/profile_subtitle"
        android:textColor="@color/colorText"
        android:textSize="17sp" />

    <RelativeLayout
        android:id="@+id/layoutQr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSubtitle"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/textQr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/imageViewQr"
            android:gravity="center"
            android:text="@string/profile_text"
            android:textColor="@color/colorText"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/imageViewQr"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignParentEnd="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textCodeQr"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewQr"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="17sp"
            tools:text="2055" />


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/layoutDeviceDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutQr"
        android:layout_margin="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/profile_agen_id"
                android:textColor="@color/colorText"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textUserIdValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorText"
                android:textSize="22sp"
                tools:text="YYK200" />

            <TextView
                android:id="@+id/textCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/profile_code_id"
                android:textColor="@color/colorText"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textCodeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/profile_subtitle"
                android:textColor="@color/colorText"
                android:textSize="22sp"
                tools:text="20655" />


            <TextView
                android:id="@+id/textImei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/profile_imei"
                android:textColor="@color/colorText"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textImeiValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorText"
                android:textSize="22sp"
                tools:text="53842979208458768" />

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/profile_location"
                android:textColor="@color/colorText"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textLocationValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/profile_subtitle"
                android:textColor="@color/colorText"
                android:textSize="22sp"
                tools:text="-6.2154197, 106.8030892" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/buttonDeactivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutDeviceDetails"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/profile_button_request_deactivation"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>