<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="48dp"
    tools:context=".presentation.ui.registration.RegistrationFragment">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/registration_title"
        android:textColor="@color/colorAccentGreen"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:gravity="center"
        android:text="@string/registration_subtitle"
        android:textColor="@color/colorText"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSubtitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        android:src="@drawable/img_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/registration_button_start"
        android:textAllCaps="true"
        android:textColor="@color/colorTextWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonStart"
        android:layout_margin="8dp"
        android:visibility="gone" />

</RelativeLayout>